# GoFaGo

./: .gitignore  POC_README.md  PRODUCTION_DEPLOYMENT.md  README.md  deploy-eks.sh  docker-compose.yml  env.example  start_app.py
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/data/: nike.csv  nike1.csv
frontend_python/: Dockerfile  README.md  app.py  config.py  main.py  mcp_client.py  pyproject.toml  requirements.txt
frontend_python/static/: script.js  styles.css
frontend_python/templates/: index.html
k8s/: backend-deployment.yaml  frontend-deployment.yaml  namespace-ingress.yaml  secrets-configmap.yaml
