[project]
name = "frontend-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.71.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "mcp>=1.19.0",
    "pydantic>=2.12.3",
    "pyngrok>=7.4.1",
    "python-dotenv>=1.2.1",
]
